# async-ocr-rag-multimodal-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
ai-worker/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
ai-worker/ai_worker/: __init__.py  search_unit_indexing.py
ai-worker/app/: __init__.py  api.py  main.py
ai-worker/eval/: README.md  __init__.py  run_eval.py  tune_eval.py  tune_eval_offline.py
ai-worker/fixtures/: LICENSE-ANIME-CORPUS.md  LICENSE-ENTERPRISE-CORPUS.md  anime_corpus_kr.meta.json  anime_kr.jsonl  anime_sample.jsonl  kr_sample.jsonl
ai-worker/scripts/: build_legacy_baseline_final.py  build_phase7_keyword_sanity_500.py  build_phase7_llm_silver_500.py  build_rag_index.py  confirm_embedding_text_variant.py  confirm_rerank_input_cap_policy.py  confirm_reranker_input_format.py  confirm_wide_mmr_best_configs.py  doctor.py  eval_agent_loop_ab.py  eval_agent_loop_ab_baseline.py  eval_full_silver_minimal_sweep.py  eval_wide_mmr_titlecap_sweep.py  export_answerability_audit.py  export_phase7_human_audit_seed.py  export_phase7_human_gold_seed.py  export_phase7_human_gold_seed_100.py  export_phase7_llm_silver_focus_50.py  finalize_phase7_5_production_recommendation.py  finalize_wide_mmr_report.py  make_anime_poster_fixtures.py  make_multimodal_sample_fixtures.py  make_ocr_sample_fixtures.py  phase7_human_gold_tune.py  rerender_cap_policy_verdict.py  rerender_variant_verdict.py  round_adapter.py  run_phase7_0_retrieval_title_ab.py  run_phase7_1_reranker_ab.py  run_phase7_3_confidence_eval.py  run_phase7_latency_smoke.py  (+16 more)
(+574 files in other folders)
