[project]
name = "ai-worker"
version = "0.1.0"
description = "Long-lived AI processing worker — Redis queue consumer, claim/callback client, capability runner"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "redis==5.0.8",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.10",
    "openpyxl==3.1.5",
    "defusedxml>=0.7.1",
    "pymupdf>=1.26,<2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
ocr = [
    "paddleocr>=3.3.3,<3.4",
    "paddlepaddle>=3.2,<3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ai_worker*"]
